# Jaskier-v3

./: .gitignore  ErrorHandler.py  Jaskier-DMB.pem  JaskierGE.py  YTDLSource.py  bot.py  jaskier-diagram.drawio  musicqueue.py  pyproject.toml
